Setup for local deployment